Fix MongoDB role to work more flexible

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,10 @@
 ---
 mongodb_version: "4.0"
+admin_password: changeit123
+admin_roles: dbAdminAnyDatabase
+users:
+  devops:
+    database: admin
+    password: changeit123
+    roles: dbAdmin
+    state: present
