--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,3 @@
 ---
-- name: enable and start mongod service
-  service:
-    name: mongod
-    enabled: true
-    daemon_reload: true
+- name: restart
+  service: name=mongod state=restarted
