--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,8 +21,45 @@
     name: mongodb-org
     state: present
 
+- name: Make a directory
+  file:
+    path: /var/lib/mongodb
+    state: directory
+    owner: mongodb
+    group: mongodb
+    mode: 0775
+
 - name: re-apply the mongodb configuration
   template:
     src: templates/mongod.conf.j2
     dest: "/etc/mongod.conf"
-  notify: enable and start mongod service
+  notify: restart
+
+- name: Configure MongoDB
+  action: service name=mongod state=started enabled=yes
+
+- pip: 
+    name: pymongo
+
+- mongodb_user:
+    name: admin
+    database: admin
+    password: "{{ admin_password }}"
+    roles: "{{ admin_roles }}"
+    state: present
+    update_password: on_create
+  with_dict: "{{ users }}"
+  register: add_admin
+
+- mongodb_user:
+    name: "{{ item.key }}"
+    database: "{{ item.value.database }}"
+    password: "{{ item.value.password }}"
+    roles: "{{ item.value.roles }}"
+    state: "{{ item.value.state }}"
+    update_password: on_create
+    login_database: admin
+    login_user: admin
+    login_password: "{{ admin_password }}"
+    login_port: 27017
+  with_dict: "{{ users }}"
