--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,3 +8,5 @@ users:
     password: changeit123
     roles: dbAdmin
     state: present
+mongodb_conf_template: mongod.conf.j2
+mongodb_logrotate_conf_template: mongodb_logrotate.conf.j2
