--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,3 +11,4 @@ users:
 mongodb_conf_template: mongod.conf.j2
 mongodb_logrotate_conf_template: mongodb_logrotate.conf.j2
 mongodb_logfile: /var/log/mongodb/mongod.log
+mongodb_authorization: disabled
