--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,5 +70,5 @@
     login_database: admin
     login_user: admin
     login_password: "{{ admin_password }}"
-    login_port: 27017
+    login_port: "27017"
   with_dict: "{{ users }}"
