--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,9 @@
 - name: ensure gpg & apt-utils available
   apt:
     name: "{{ packages }}"
-    state: present
-    update_cache: true
+    state: latest
+    update_cache: yes
+    install_recommends: yes
   vars:
     packages:
     - gnupg
@@ -23,7 +24,9 @@
 - name: install mongodb
   apt:
     name: mongodb-org
-    state: present
+    state: latest
+    update_cache: yes
+    install_recommends: yes
 
 - name: Make a directory
   file:
@@ -39,7 +42,7 @@
     dest: "/etc/mongod.conf"
   notify: restart mongod
 
-- name: restart mongod
+- name: restart mongod for apply configs
   systemd: 
     name: mongod
     state: restarted
@@ -79,3 +82,6 @@
     login_password: "{{ admin_password }}"
     login_port: "27017"
   with_dict: "{{ users }}"
+
+- name: force all notified handlers to run at this point, for applying all mongodb configs
+  meta: flush_handlers
